openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vcapacity
  labels:
    app: vcapacity
spec:
  type: ClusterIP
  selector:
    app: vcapacity
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
